--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/mymaor89/TDD.git"
   },
-  "author": "Maor Yatskan, Anna Rogozin, Georgi Dejabarov",
+  "author": "Maor Yatskan, Anna Rogozin, George Djabarov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mymaor89/TDD/issues"
